<resources>
    <string name="app_name">MyHrm</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">SEND</string>
    <string name="port">Port</string>
    <string name="hostname">Hostname</string>
    <string name="hostnameHint">filamenti</string>
    <string name="autofillHintPort">portnumber</string>
    <string name="button_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="pref_host">de.netzrac.myhrm.pref_host</string>
    <string name="pref_port">de.netzrac.myhrm.pref_port</string>
    <string name="pref_hrm">de.netzrac.myhrm.pref_hrm</string>
    <string name="pref_file">de.netzrac.myhrm.pref_appl_file</string>
    <string name="STOP">STOP</string>
    <string name="START">START</string>
    <string name="selectedHrmDevice"><![CDATA[<PRESS HERE FOR SEARCH>]]></string>
</resources>
